# pointcloud_compressor

./: CMakeLists.txt  LICENSE  README.md  keikakusho.md  package.xml  refactoring.md
config/: block_size_optimizer_params.yaml  compression_presets.yaml  pointcloud_compressor_params.yaml  vq_occupancy_compressor_params.yaml
docs/: ply_support_plan.md
include/pointcloud_compressor/bridge/: Bridge.hpp  RuntimeAPI.hpp
include/pointcloud_compressor/cli/: OptimizeWorkflow.hpp
include/pointcloud_compressor/common/: CompressionArtifacts.hpp  CompressionDataUtils.hpp  RuntimeHelpers.hpp
include/pointcloud_compressor/config/: CliConfigParser.hpp  CompressorConfig.hpp  ConfigTransforms.hpp
include/pointcloud_compressor/core/: BitVoxelGrid.hpp  BlockSizeReportFormatter.hpp  CompressionReportFormatter.hpp  PatternDictionaryBuilder.hpp  PatternEncoder.hpp  PointCloudCompressor.hpp  VoxelProcessor.hpp
include/pointcloud_compressor/io/: CompressionReportBuilder.hpp  FileFormatDetector.hpp  HDF5IO.hpp  Hdf5Writers.hpp  PcdIO.hpp  PlyIO.hpp  PointCloudIO.hpp
include/pointcloud_compressor/model/: VoxelGrid.hpp
include/pointcloud_compressor/ros/: MessageUtils.hpp
include/pointcloud_compressor/runtime/: CompressionArtifacts.hpp  CompressionReportBuilder.hpp  Hdf5Writers.hpp  RuntimeAPI.hpp  RuntimeHelpers.hpp  TempFileManager.hpp
include/pointcloud_compressor/services/: CompressionExecutor.hpp  RuntimeCompressionService.hpp
include/pointcloud_compressor/utils/: ErrorAccumulator.hpp
include/vq_occupancy_compressor/bridge/: Bridge.hpp
include/vq_occupancy_compressor/cli/: OptimizeWorkflow.hpp
include/vq_occupancy_compressor/common/: CompressionArtifacts.hpp  CompressionDataUtils.hpp
include/vq_occupancy_compressor/config/: CliConfigParser.hpp  CompressorConfig.hpp  ConfigTransforms.hpp
include/vq_occupancy_compressor/core/: BitVoxelGrid.hpp  PatternDictionaryBuilder.hpp  VoxelProcessor.hpp  VqOccupancyCompressor.hpp
include/vq_occupancy_compressor/io/: FileFormatDetector.hpp  HDF5IO.hpp  Hdf5Writers.hpp  PcdIO.hpp  PlyIO.hpp  PointCloudIO.hpp
include/vq_occupancy_compressor/model/: VoxelGrid.hpp
include/vq_occupancy_compressor/report/: ReportUtilities.hpp
include/vq_occupancy_compressor/ros/: BlockSizeOptimizerSummary.hpp  CompressionSummaryLogger.hpp  MessageUtils.hpp
include/vq_occupancy_compressor/services/: CompressionExecutor.hpp
include/vq_occupancy_compressor/utils/: CompressionSummary.hpp  ErrorAccumulator.hpp
launch/: block_size_optimizer.launch.py  compress_and_view.launch.py  demo.launch.py  pointcloud_compressor.launch.py  pointcloud_compressor_preset.launch.py  vq_occupancy_compressor.launch.py
msg/: CompressedPointCloud.msg  CompressionSettings.msg  PatternDictionary.msg
src/: pointcloud_compressor.cpp
src/apps/: OptimizeWorkflow.cpp  cli_main.cpp
src/bridge/: Bridge.cpp  RuntimeAPI.cpp
src/common/: CompressionArtifacts.cpp  CompressionDataUtils.cpp  RuntimeHelpers.cpp
src/config/: CliConfigParser.cpp  CompressorConfig.cpp  ConfigTransforms.cpp
src/core/: BlockSizeReportFormatter.cpp  CompressionReportFormatter.cpp  PatternDictionaryBuilder.cpp  PatternEncoder.cpp  PointCloudCompressor.cpp  VoxelProcessor.cpp  VqOccupancyCompressor.cpp
src/io/: CompressionReportBuilder.cpp  FileFormatDetector.cpp  HDF5IO.cpp  Hdf5Writers.cpp  PcdIO.cpp  PlyIO.cpp  PointCloudIO.cpp
src/model/: VoxelGrid.cpp
src/report/: ReportUtilities.cpp
src/ros/: block_size_optimizer_node.cpp  compressed_viewer_node.cpp  pointcloud_compressor_node.cpp  vq_occupancy_compressor_node.cpp
src/ros/runtime/: CompressionArtifacts.cpp  CompressionReportBuilder.cpp  Hdf5Writers.cpp  RuntimeAPI.cpp  RuntimeHelpers.cpp  TempFileManager.cpp  pointcloud_compressor.cpp
src/services/: CompressionExecutor.cpp  RuntimeCompressionService.cpp
src/utils/: CompressionSummary.cpp
test/: test_bit_voxel_grid.cpp  test_block_size_optimization.cpp  test_block_size_optimizer_summary.cpp  test_block_size_report_formatter.cpp  test_bridge_api.cpp  test_cli_config_parser.cpp  test_cli_optimize.cpp  test_compression_data_utils.cpp  test_compression_executor.cpp  test_compression_report_formatter.cpp  test_compressor_config.cpp  test_config_transforms.cpp  test_decompression.cpp  test_dictionary_builder.cpp  test_dynamic_index_encoding.cpp  test_end_to_end.cpp  test_error_accumulator.cpp  test_file_format_detector.cpp  test_hdf5_io.cpp  test_hdf5_writers.cpp  test_integration.cpp  test_large_pattern_indices.cpp  test_pattern_encoder.cpp  test_pcd_binary_extra_property.cpp  test_pcd_io.cpp  test_ply_io.cpp  test_ply_property_order.cpp  test_pointcloud_io.cpp  test_ros_message_utils.cpp  test_ros_message_utils_advanced.cpp  test_runtime_api.cpp  test_runtime_artifacts.cpp  test_runtime_compression_service.cpp  test_runtime_helpers.cpp  test_runtime_report_builder.cpp  test_runtime_temp_manager.cpp  test_voxel_grid_reuse.cpp  test_voxel_processor.cpp  test_voxel_round_trip.cpp
test/test_data/: commented.ply  cube.ply  empty.ply  invalid.ply  triangle.ply
